...
    val save: String
    val share: String
}

internal data class FolderInsertEnStrings(
    override val addToFolder: String = "Add to folder",
    override val folderNameLabel: String = "Folder name",
    override val save: String = "Save",
    override val share: String = "Share",
) : FolderInsertStrings

internal data class FolderInsertPtStrings(
    override val addToFolder: String = "Adicionar à pasta",
...
