...
        .clip(CircleShape)
        .run {
            if (showIcon) {
                background(MaterialTheme.colors.surface.copy(alpha = .8f))
            } else this
        }
        .semantics { contentDescription = "Close" },
    contentAlignment = Alignment.Center
) {
    if (showIcon) {
        Icon(
            imageVector = Icons.Default.Close,
            contentDescription = null,
...
